# context-pruning

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: app.example.toml  secrets.example.toml
docs/: architecture.md  kaggle_bootstrap.md  kaggle_secrets.md
notebooks/: context_pruning_kaggle_runner.ipynb  kaggle_runner.py  kaggle_submission.py
src/acpa_gemma/: __init__.py  acpa.py  benchmark.py  cli.py  config.py  cuad.py  data.py  gemma_client.py  pipeline.py  prompts.py
tests/: test_acpa.py  test_benchmark.py  test_cli.py  test_config.py  test_cuad.py  test_data_loading.py  test_gemma_client.py  test_pipeline.py  test_prompts.py
